backend/tests/fixtures/iptables_output_1810/cargado/save.txt
-P INPUT ACCEPT
-P FORWARD DROP
-P OUTPUT ACCEPT
-N FWDASH_FORWARD
-N FWDASH_INPUT
-N FWDASH_OUTPUT
-A INPUT -i lo -p icmp -m comment --comment "recon-a2:contador" -j ACCEPT
-A FORWARD -j FWDASH_FORWARD
-A OUTPUT -o lo -p icmp -m comment --comment "recon-a2:contador" -j ACCEPT
-A OUTPUT -j FWDASH_OUTPUT
-A FWDASH_FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FWDASH_FORWARD -i eth0 -o eth1 -p tcp -m tcp --dport 443 -j ACCEPT
-A FWDASH_FORWARD -j DROP
-A FWDASH_INPUT -i lo -m comment --comment "fwdash:guardian:loopback" -j ACCEPT
-A FWDASH_INPUT -m conntrack --ctstate RELATED,ESTABLISHED -m comment --comment "fwdash:guardian:conntrack" -j ACCEPT
-A FWDASH_INPUT -p tcp -m tcp --dport 22 -m comment --comment "fwdash:guardian:ssh" -j ACCEPT
-A FWDASH_INPUT -s 192.168.64.0/24 -p tcp -m tcp --dport 8000 -m comment --comment "fwdash:1:api desde la red host-only" -j ACCEPT
-A FWDASH_INPUT -p tcp -m multiport --dports 80,443,8443 -j ACCEPT
-A FWDASH_INPUT -p tcp -m tcp --dport 30000:30010 -j ACCEPT
-A FWDASH_INPUT ! -s 10.0.0.0/8 -p tcp -m tcp --dport 3306 -j DROP
-A FWDASH_INPUT -p udp -m udp --sport 1024:65535 --dport 53 -j ACCEPT
-A FWDASH_INPUT -p icmp -m icmp --icmp-type 8 -m limit --limit 5/min --limit-burst 3 -j ACCEPT
-A FWDASH_INPUT -i eth0 -p tcp -m tcp --dport 23 -j LOG --log-prefix "FWDASH DROP telnet: "
-A FWDASH_INPUT -p tcp -m tcp --dport 23 -j REJECT --reject-with icmp-port-unreachable
-A FWDASH_INPUT -j DROP
-A FWDASH_OUTPUT -o lo -m comment --comment "fwdash:guardian:loopback" -j ACCEPT
-A FWDASH_OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FWDASH_OUTPUT -d 8.8.8.8/32 -p udp -m udp --dport 53 -j ACCEPT
-A FWDASH_OUTPUT -j RETURN
